test/scc/expr/semantic-errors/105.a
105.t:8:5: error: too few arguments in function call